fix: return overflow in slider

--- a/shelter/pages/main/style.css
+++ b/shelter/pages/main/style.css
@@ -222,6 +222,7 @@ button {
 .slider_content {
 	display: grid;
 	grid-template-columns: repeat(8, 1fr);
+  overflow: hidden;
 	gap: 5.63rem;
   padding: 0.5em 7.6em 3.7em;
 }
